package solidexercicio10.model;

/** Entidade que ocupa uma coordenada no mapa da missão. */
public interface Posicionavel {
    int getX();
    int getY();
}
